test/classes/initializers/parentCall/inCobeginOn.good
inCobeginOn.chpl:4: In initializer:
inCobeginOn.chpl:8: error: use of 'init this' call in an on block
